Mejoras visuales al proyecto

--- a/src/app/layout/nav/nav.html
+++ b/src/app/layout/nav/nav.html
@@ -1,7 +1,7 @@
 <div class="nav flex">
     <h1>Jose Zapata</h1>
     <ul class="list flex">
-        <li>Principal</li>
-        <li>Contactos</li>
+        <li><a routerLink="/">Principal</a></li>
+        <li><a routerLink="/contact">Contactos</a></li>
     </ul>
 </div>
