--- a/src/app/layout/nav/nav.scss
+++ b/src/app/layout/nav/nav.scss
@@ -1,22 +1,22 @@
-
-.flex{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
 .nav {
-    background-color: #222;
-    padding: 1rem 2rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    color: white;
-}
+  background-color: #222;
+  color: white;
+  padding: 1rem 2rem;
+  justify-content: space-between;
 
-.list{
+  ul.list {
+    list-style: none;
     display: flex;
-    gap: 2rem;
-    font-size: 1.1rem;
+    gap: 1rem;
+
+    a {
+      color: white;
+      text-decoration: none;
+      transition: 0.3s ease;
+
+      &:hover {
+        color: #00d1b2; // un celestito
+      }
+    }
+  }
 }
