Correcciones ortograficas y error de texto en footer

--- a/src/app/layout/nav/nav.html
+++ b/src/app/layout/nav/nav.html
@@ -1,5 +1,5 @@
 <div class="nav flex">
-    <h1>Jose Zapata</h1>
+    <h1>José Zapata</h1>
     <ul class="list flex">
         <li><a routerLink="/">Principal</a></li>
         <li><a routerLink="/contact">Contactos</a></li>
