--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,2 +1,2 @@
-<h1>Bienvenido a la pagina de Jose Zapata!</h1>
-<p>Te dejo el clasico Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequuntur iste, voluptas ipsa animi id deleniti labore, unde perferendis reiciendis eaque quos sunt adipisci officia expedita nisi. Culpa, ipsa dolores.</p>
+<h1>Bienvenido a la página de José Zapata!</h1>
+<p>Te dejo el clásico: Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequuntur iste, voluptas ipsa animi id deleniti labore, unde perferendis reiciendis eaque quos sunt adipisci officia expedita nisi. Culpa, ipsa dolores.</p>
