--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,1 +1,1 @@
-<p class="footer">© {{ anio }} José Zapata - Organizador de Tareas</p>
+<p class="footer">© {{ anio }} José Zapata - Todos los derechos reservados</p>
