--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,2 +1,6 @@
 <h1>Bienvenido a la página de José Zapata!</h1>
-<p>Te dejo el clásico: Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequuntur iste, voluptas ipsa animi id deleniti labore, unde perferendis reiciendis eaque quos sunt adipisci officia expedita nisi. Culpa, ipsa dolores.</p>
+<p>Identifica tu rol presionando el boton correspondiente e ingresa a nuestro inventario de productos. Si eres admin, deberías poder ver un botón para vaciar el inventario.</p>
+
+
+<button (click)="funcionGuardarRol('admin')">Admin</button>
+<button (click)="funcionGuardarRol('vendedor')">Vendedor</button>
