Emancipacion a layout-component

--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,6 +1,9 @@
-<h1>Bienvenido a la página de José Zapata!</h1>
-<p>Identifica tu rol presionando el boton correspondiente e ingresa a nuestro inventario de productos. Si eres admin, deberías poder ver un botón para vaciar el inventario.</p>
+<main>
+    <h1>Bienvenido a la página de José Zapata!</h1>
+    <p>Identifica tu rol presionando el boton correspondiente e ingresa a nuestro inventario de productos. Si eres
+        admin, deberías poder ver un botón para vaciar el inventario.</p>
 
 
-<button (click)="funcionGuardarRol('admin')">Admin</button>
-<button (click)="funcionGuardarRol('vendedor')">Vendedor</button>
+    <button (click)="funcionGuardarRol('admin')">Admin</button>
+    <button (click)="funcionGuardarRol('vendedor')">Vendedor</button>
+</main>
