--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,3 +1,5 @@
-<h1>Contáctame!</h1>
-<p>WhatsApp: +56968575082</p>
-<p>Correo: jzapatasegui&#64;gmail.com</p>
+<main>
+    <h1>Contáctame!</h1>
+    <p>WhatsApp: +56968575082</p>
+    <p>Correo: jzapatasegui&#64;gmail.com</p>
+</main>
