--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -4,6 +4,6 @@
         admin, deberías poder ver un botón para vaciar el inventario.</p>
 
 
-    <button (click)="funcionGuardarRol('admin')">Admin</button>
-    <button (click)="funcionGuardarRol('vendedor')">Vendedor</button>
+    <app-rol-button [rol]="'admin'" (rolSeleccionado)="funcionGuardarRol($event)"></app-rol-button>
+    <app-rol-button [rol]="'vendedor'" (rolSeleccionado)="funcionGuardarRol($event)"></app-rol-button>
 </main>
