creado modal para confirmar ingreso como vendedor o como admin con material

--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -4,6 +4,6 @@
         admin, deberías poder ver un botón para vaciar el inventario.</p>
 
 
-    <app-rol-button [rol]="'admin'" (rolSeleccionado)="funcionGuardarRol($event)"></app-rol-button>
-    <app-rol-button [rol]="'vendedor'" (rolSeleccionado)="funcionGuardarRol($event)"></app-rol-button>
+    <app-rol-button [rol]="'admin'" (rolSeleccionado)="abrirModalGuardarRol($event)"></app-rol-button>
+    <app-rol-button [rol]="'vendedor'" (rolSeleccionado)="abrirModalGuardarRol($event)"></app-rol-button>
 </main>
