--- a/src/app/pages/inventario-component/tabla-inventario/tabla-inventario.html
+++ b/src/app/pages/inventario-component/tabla-inventario/tabla-inventario.html
@@ -1,5 +1,14 @@
-<div class="inventario-container">
+<div class="table-container">
   <h1>Inventario de Productos</h1>
+  
+  <button
+    *ngIf="rolUsuario === 'admin'"
+    mat-raised-button
+    color="warn"
+    (click)="vaciarInventario()"
+    class="vaciar-button">
+    Vaciar Inventario
+  </button>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     
@@ -7,7 +16,7 @@
       <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let producto"> {{producto.id}} </td>
     </ng-container>
-
+    
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef> Producto </th>
       <td mat-cell *matCellDef="let producto"> {{producto.nombre}} </td>
@@ -27,7 +36,20 @@
       <th mat-header-cell *matHeaderCellDef> Categoría </th>
       <td mat-cell *matCellDef="let producto"> {{producto.categoria}} </td>
     </ng-container>
-
+    
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+      <td mat-cell *matCellDef="let producto">
+        <button
+          *ngIf="rolUsuario === 'admin'"
+          mat-icon-button
+          color="warn"
+          (click)="eliminarProducto(producto.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    
     <tr mat-header-row *matHeaderRowDef="columnas"></tr>
     <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
   
